cleaned up orbit code, removed PINN and .yml

--- a/NewtonianOrbit.ipynb
+++ b/NewtonianOrbit.ipynb
@@ -4,171 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Newtonian Elliptical Orbit\n",
-    "This model aims to plot the orbit of two black holes with no post-newtonian corrections. Thus, it is a typical elliptical orbit of two masses $M_1$ and $M_2$. We implement the RK4 method in the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imports\n",
-    "import numpy as np\n",
-    "import math\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "from matplotlib.animation import FuncAnimation\n",
-    "from IPython.display import HTML"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gravitational constant\n",
-    "G = 6.67430e-11\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# acceleration and velocity ODEs\n",
-    "# in x-y plane, there are 8 total terms (2 for velocity, 2 for acceleration x2 for each body)\n",
-    "# the parameter state = [x, y, vx, vy]\n",
-    "def ODEs(states, m1, m2):\n",
-    "    # define states\n",
-    "    state1, state2 = states[0], states[1]\n",
-    "\n",
-    "    # define positions\n",
-    "    x1, x2 = state1[0], state2[0]\n",
-    "    y1, y2 = state1[1], state2[1]\n",
-    "\n",
-    "    # velocities\n",
-    "    vx1, vx2 = state1[2], state2[2]\n",
-    "    vy1, vy2 = state1[3], state2[3]\n",
-    "\n",
-    "    # separation distance\n",
-    "    r = np.sqrt((x2 - x1)**2 + (y2 - y1)**2)\n",
-    "    r3 = r ** 3\n",
-    "    assert r3 != 0, \"Cannot divide by zero\"\n",
-    "\n",
-    "    # ODEs: mass 1\n",
-    "    dxdt_m1 = vx1\n",
-    "    dydt_m1 = vy1\n",
-    "\n",
-    "    dx2dt2_m1 = (-G * m2) / r3\n",
-    "    dy2dt2_m1 = (-G * m2) / r3\n",
-    "\n",
-    "    # ODEs: mass 2\n",
-    "    dxdt_m2 = vx2\n",
-    "    dydt_m2 = vy2\n",
-    "\n",
-    "    dx2dt2_m2 = (-G * m1) / r3\n",
-    "    dy2dt2_m2 = (-G * m1) / r3\n",
-    "\n",
-    "    # return derivatives\n",
-    "    s1 = np.array([dxdt_m1, dydt_m1, dx2dt2_m1, dy2dt2_m1], float)\n",
-    "    s2 = np.array([dxdt_m2, dydt_m2, dx2dt2_m2, dy2dt2_m2], float)\n",
-    "    return np.vstack((s1, s2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# RK4 method\n",
-    "def rk4(s, m1, m2, dt):\n",
-    "    k1 = dt * ODEs(s, m1, m2)\n",
-    "    k2 = dt * ODEs(s + 0.5 * k1, m1, m2)\n",
-    "    k3 = dt * ODEs(s + 0.5 * k2, m1, m2)\n",
-    "    k4 = dt * ODEs(s + k3, m1, m2)\n",
-    "\n",
-    "    correction = (1/6) * (k1 + (2 * k2) + (2*k3) + k4)\n",
-    "    return s + correction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# simple class to hold the body's paramaters and methods\n",
-    "class Body(object):\n",
-    "    def __init__(self, mass, initial_x, initial_y, initial_vx, initial_vy):\n",
-    "        self.mass = mass\n",
-    "        self.initial_x = initial_x\n",
-    "        self.initial_y = initial_y\n",
-    "        self.initial_vx = initial_vx\n",
-    "        self.initial_vy = initial_vy\n",
-    "        self.state = np.array([self.initial_x, self.initial_y, self.initial_vx, self.initial_vy])\n",
-    "\n",
-    "    def set_zeros(size):\n",
-    "        self.x = np.zeros(size)\n",
-    "        self.y = np.zeros(size)\n",
-    "        self.vx = np.zeros(size)\n",
-    "        self.vy = np.zeros(size)\n",
-    "\n",
-    "        # set initial state in array\n",
-    "        self.x[0] = self.initial_x\n",
-    "        self.y[0] = self.initial_y\n",
-    "        self.vx[0] = self.initial_vx\n",
-    "        self.vy[0] = self.initial_vy\n",
-    "\n",
-    "        return self.x, self.y, self.vx, self.vy\n",
-    "\n",
-    "\n",
-    "    def get_state(i):\n",
-    "        return np.array([self.x[i]], self.y[i], self.vx[i], self.vy[i])\n",
-    "    \n",
-    "    def set_state(i, s):\n",
-    "        self.x[i] = s[0]\n",
-    "        self.y[i] = s[1]\n",
-    "        self.vx[i] = s[2]\n",
-    "        self.vy[i] = s[3]\n",
-    "\n",
-    "    \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_orbit(body1, body2, start, end, N):\n",
-    "    dt = (end - start) / N\n",
-    "    # set zeros for both masses\n",
-    "    body1.set_zeros(N)\n",
-    "    body2.set_zeros(N)\n",
-    "\n",
-    "    # run rk4 method\n",
-    "    for i in range(1, N):\n",
-    "        # get states for each mass\n",
-    "        s1 = body1.get_state(i-1)\n",
-    "        s2 = body2.get_state(i-1)\n",
-    "\n",
-    "        s_prev = np.vstack((s1, s2))\n",
-    "\n",
-    "        # run rk4\n",
-    "        s_new = rk4(s, body1.mass, body2.mass, dt)\n",
-    "\n",
-    "        s1_new = s_new[0]\n",
-    "        s2_new = s_new[1]\n",
-    "\n",
-    "        # set the state\n",
-    "        body1.set_state(i, s1_new)\n",
-    "        body2.set_state(i, s2_new)\n",
-    "    "
+    "## Newtonian Orbits\n",
+    "The following code aims to model the orbit of two bodies $M_1$ and $M_2$ using purely Newtonian techniques. We implemented the RK4 solver to calculate the positions over time."
    ]
   },
   {
@@ -177,10 +14,155 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example usage\n",
-    "# define black holes\n",
-    "b1 = "
+    "# imports\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gravitational constant\n",
+    "G = 6.67430e-11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialize Body class \n",
+    "class Body():\n",
+    "    def __init__(self, pos_vec, v_vec, mass):\n",
+    "        self.pos = pos_vec\n",
+    "        self.v = v_vec\n",
+    "        self.mass = mass\n",
+    "        self.state = np.concatenate((self.pos, self.v))\n",
+    "    \n",
+    "    def return_state(self):\n",
+    "        return self.state\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Simulation():\n",
+    "    def __init__(self, bodies):\n",
+    "        self.bodies = bodies\n",
+    "        self.N_bodies = 2 # expect 2 bodies for our simulation\n",
+    "        self.Ndim = 4 # composed of (x,y) components for position, velocity\n",
+    "        \n",
+    "        self.b1 = bodies[0]\n",
+    "        self.b2 = bodies[1]\n",
+    "        self.state_vec = np.vstack((self.b1.return_state(), self.b2.return_state()))\n",
+    "        self.mass_vec = np.array([self.b1.mass, self.b2.mass])\n",
+    "\n",
+    "    def set_ODEs(self, solver):\n",
+    "        self.solver = solver\n",
+    "\n",
+    "    def rk4(self, dt):\n",
+    "        k1 = dt * self.solver(self.state_vec, self.mass_vec)\n",
+    "        k2 = dt * self.solver(self.state_vec + 0.5 * k1, self.mass_vec)\n",
+    "        k3 = dt * self.solver(self.state_vec + 0.5 * k2, self.mass_vec)\n",
+    "        k4 = dt * self.solver(self.state_vec + k3, self.mass_vec)\n",
+    "\n",
+    "        new_state = self.state_vec + (1/6) * (k1 + 2*k2 + 2*k3 + k4)\n",
+    "        return new_state\n",
+    "\n",
+    "    def run(self, dt, steps):\n",
+    "        self.b1_history = np.zeros((steps, 4))\n",
+    "        self.b2_history = np.zeros((steps, 4))\n",
+    "\n",
+    "        # set initial state\n",
+    "        self.b1_history[0] = self.b1.return_state()\n",
+    "        self.b2_history[0] = self.b2.return_state()\n",
+    "\n",
+    "        for i in range(1, steps):\n",
+    "            # calculate new state with rk4\n",
+    "            new_state = self.rk4(dt)\n",
+    "\n",
+    "            # append new state to history\n",
+    "            b1_new = new_state[0]\n",
+    "            b2_new = new_state[1]\n",
+    "            self.b1_history[i] = b1_new\n",
+    "            self.b2_history[i] = b2_new\n",
+    "\n",
+    "            # set state_vec attribute as the new state\n",
+    "            self.state_vec = new_state\n",
+    "\n",
+    "            # repeat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solver routine\n",
+    "def solve_orbit(state_vec, masses):\n",
+    "    # masses\n",
+    "    m1 = masses[0]\n",
+    "    m2 = masses[1]\n",
+    "\n",
+    "    # positions\n",
+    "    b1_pos = state_vec[0][0:2]\n",
+    "    b2_pos = state_vec[1][0:2]\n",
+    "\n",
+    "    # velocities\n",
+    "    b1_v = state_vec[0][2:]\n",
+    "    b2_v = state_vec[1][2:]\n",
+    "\n",
+    "    # separations\n",
+    "    dx = b1_pos[0] - b2_pos[0] # points from b2 to b1\n",
+    "    dy = b1_pos[1] - b2_pos[1]\n",
+    "\n",
+    "    # r separation distance\n",
+    "    r = np.sqrt(dx**2 + dy**2)\n",
+    "    r3 = r**3\n",
+    "\n",
+    "    # calculate accelerations\n",
+    "    ax_1 = ((-G * m2) / r3) * dx\n",
+    "    ay_1 = ((-G * m2) / r3) * dy\n",
+    "\n",
+    "    ax_2 = ((-G * m1) / r3) * (-dx)\n",
+    "    ay_2 = ((-G * m1) / r3) * (-dy)\n",
+    "\n",
+    "    # return the derivatives\n",
+    "    b1_a = np.array([ax_1, ay_1])\n",
+    "    b1_derivs = np.concatenate((b1_v, b1_a)) # velocity and acceleration\n",
+    "\n",
+    "    b2_a = np.array([ax_2, ay_2])\n",
+    "    b2_derivs = np.concatenate((b2_v, b2_a)) # velocity and acceleration\n",
+    "\n",
+    "    # stack\n",
+    "    return np.vstack((b1_derivs, b2_derivs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example Usage \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
